<?xml version="1.0" encoding="utf-8"?>
<!-- created by Kate Wheeler 20 Sept 2026 -->
<!-- BumbleBook Book Inventory Application -->
<!-- activity_home defines home screen layout -->


<!-- Initialize constraint layout -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TextView for title/header "Collection" -->
    <TextView
        android:id="@+id/Collection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFD966"
        android:text="@string/home_header_label"
        android:textSize="40sp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <!-- Initialize horizontal scroll view so that column titles "stick" at the top of the screen -->
    <HorizontalScrollView
        android:id="@+id/horizontalScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/Collection"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Initialize sub-layout to display data table -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:textSize="24sp"
            android:paddingBottom="120dp">

            <!-- Initialize sub-sub-layout for columns to stick as page is scrolled -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#FFFFFF">

                <!-- Display primary title column label -->
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/colLabel_title1"
                    android:padding="15dp" >
                </TextView>

                <!-- Display subtitle column label -->
                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/colLabel_title2"
                    android:padding="15dp" >
                </TextView>

                <!-- Display descriptive title column label -->
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/colLabel_title3"
                    android:padding="15dp" >
                </TextView>

                <!-- Display edition title column label -->
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/colLabel_edition"
                    android:padding="15dp" >
                </TextView>

                <!-- Display print year column label -->
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/colLabel_printYear"
                    android:padding="15dp" />

                <!-- Display publisher column label -->
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/colLabel_publisher"
                    android:padding="15dp" />

                <!-- Display author column label -->
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/colLabel_author"
                    android:padding="15dp" />

                <!-- Display editor column label -->
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/colLabel_editor"
                    android:padding="15dp" />

                <!-- Display genre column label -->
                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/colLabel_genre"
                    android:padding="15dp" />

                <!-- Display quantity column label -->
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/colLabel_quantity"
                    android:padding="15dp" />

            </LinearLayout>

            <!--Initialize scrollview for table contents -->
            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1">

                <!-- Initialize linear layout for table contents -->
                <LinearLayout
                    android:id="@+id/table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

            </ScrollView>

        </LinearLayout>

    </HorizontalScrollView>

    <!-- Initialize new linear layout for buttons -->
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:elevation="8dp"
        android:layout_margin="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Create button for user to press if they want to add a new book to the table -->
        <Button
            android:id="@+id/addButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginEnd="15dp"
            android:text="@string/button1_add"
            android:backgroundTint="#000000"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:maxLines="2"
            android:textAllCaps="false" />

        <!-- Create button for user to press if they want to edit a book in the table -->
        <Button
            android:id="@+id/editButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginEnd="15dp"
            android:text="@string/button2_edit"
            android:backgroundTint="#000000"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:maxLines="2"
            android:textAllCaps="false" />

        <!-- Create button for user to press if they want to delete a book from the table -->
        <Button
            android:id="@+id/deleteButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginEnd="15dp"
            android:text="@string/button3_delete"
            android:backgroundTint="#000000"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:maxLines="2"
            android:textAllCaps="false"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
